# wiz

./: .travis.yml  Arithmetic.hs  Define.hs  LICENSE  Lambda.hs  README.md  TODO  init.scm  repl.el  stack.yaml  wiz.cabal
docs/: grammar.html
src/: Main.hs
src/Wiz/: Core.hs  Environment.hs  EvalApply.hs  Parser.hs  Types.hs  Utils.hs
test/: closure.scm  count-change.scm  eval.hs  newton.scm  prime.scm  set-car.scm  set-cdr-2.scm  set-cdr.scm  set.scm  square.scm
test/Wiz/: EnvironmentSpec.hs  EvalApplySpec.hs  TestUtils.hs
