name:                wiz
version:             0.1.0.0
synopsis:            A Scheme interpreter
-- description:         
homepage:            stefanorodighiero.net/software/wiz.html
license:             MIT
license-file:        LICENSE
author:              Stefano Rodighiero
maintainer:          stefano.rodighiero@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.22

executable wiz
  main-is:             Main.hs
  other-modules:       Wiz.Parser
                     , Wiz.Types
                     , Wiz.Environment
                     , Wiz.EvalApply
  build-depends:       base >=4.7 && <=4.9
                     , transformers
                     , parsec >=3.1 && <3.2
                     , parsec-numbers
                     , haskeline >=0.7 && <0.8
                     , containers >=0.5 && <0.6
                     , hspec >=2.2 && <2.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite main-suite
  main-is: Spec.hs
  build-depends:       base >=4.7 && <=4.9
                     , transformers
                     , parsec >=3.1 && <3.2
                     , parsec-numbers
                     , haskeline >=0.7 && <0.8
                     , containers >=0.5 && <0.6
                     , hspec >=2.2 && <2.3
  type: exitcode-stdio-1.0
  hs-source-dirs:      src
                     , test
  other-modules:       Wiz.Parser
                     , Wiz.Types
                     , Wiz.Environment
                     , Wiz.EvalApply
                     , Wiz.EvalApplySpec
                     , Wiz.EnvironmentSpec
  default-language:    Haskell2010
